@@ -57,8 +57,18 @@ a string which will be called on the exporter
 
 For an example, see the L</SYNOPSIS>, in which a method is defined to produce
 the globref to share.  This allows the glob-exporting package to be subclassed,
-for for the subclass to choose to re-use the same glob when exporting  or to
+for for the subclass to choose to re-use the same glob when exporting or to
 export a new one.
+
+If there are entries in the arguments to the globref-exporting collector
+I<other> than those beginning with a dash, a hashref of them will be passed to
+the globref locator.  In other words, if we were to write this:
+
+  use Shared::Symbol '$Symbol' => { arg => 1, -as => 2 };
+
+It would result in a call like the following:
+
+  my $globref = Shared::Symbol->_shared_globref({ arg => 1 });
 
 =cut
 
@@ -81,8 +91,15 @@ sub glob_exporter {
 
   return sub {
     my ($value, $data) = @_;
-    my $globref = $data->{class}->$globref_method($value);
 
+    my @args = defined $value
+      ? ({ map {; $_ => $value->{$_} } grep { ! /^-/ } keys %$value })
+      : ();
+
+    my $globref = $data->{class}->$globref_method(@args);
+
+    # allow a SCALAR ref in the future to do ($$as = $globref) as we allow subs
+    # to be exported into scalar refs -- rjbs, 2010-11-23
     my $name;
     $name = defined $value->{'-as'} ? $value->{'-as'} : $default_name;
 
