@@ -1,5 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          pass arguments to collector through to globref locator
 
 0.001     2010-11-23 15:21:43 America/New_York
+
+          first release
